# ai-diet-coach-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  chat_memory.py  diet_agent.py  docker-compose.yml  meal_planner.py  monitoring.py  nutrition.py  pyproject.toml  requirements.txt  run_evals.py  scenarios.csv  shopping_list.py  tracking.py  user_profile.py
.github/workflows/: ci.yml  eval.yml
.streamlit/: secrets.toml.example
agent/: __init__.py  calorie_calculator.py  chat_memory.py  diet_agent.py  meal_planner.py  monitoring.py  restaurants.py  shopping_list.py  tracking.py  user_profile.py
data/: asian_recipes.json  recipes.json
data/traces/: 02de224f-f5bc-40f0-85df-9788db268ee2.json  268626d1-3ff2-4482-8c97-da715f732d7f.json  2c7173a4-cc81-406e-a39f-a50c0257ba72.json  7924b82d-8916-47cf-9285-b69fa0de7af2.json  7eb6c2fd-9cfb-47cd-b2a3-afe08a3391d8.json  80e6db61-e929-4258-9b5e-ef2803e46eba.json  b436d03a-367e-4aab-9f8a-8dc943b0fe78.json  bff06bc0-5728-4b41-a3e6-12ec4f9436cf.json  de1878dd-c6b3-447c-a39f-1355418f29df.json  e554c712-b6e0-4833-97a5-7fa86f6fe9eb.json
evals/: eval_judge.py  eval_results.json  judge_results.json  label_evals.py  labels.csv  run_evals.py  traces_to_eval.py
notebooks/: 01-setup.ipynb  02-rag.ipynb  03-agent.ipynb  03-retrieval-eval.ipynb
tests/: judge.py  test_agent.py  test_judge.py
