[project]
name = "ai-diet-coach-agent"
version = "0.1.0"
description = "AI Diet Coach Agent — personalized weekly meal plans and restaurant suggestions for weight-loss goals"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "minsearch>=0.0.5",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
]
